cmake_minimum_required(VERSION 3.10.0)

if(NOT DEFINED PROJECT_VERSION_MAJOR)
  set(PROJECT_VERSION_MAJOR 0)
endif()
if(NOT DEFINED PROJECT_VERSION_MINOR)
  set(PROJECT_VERSION_MINOR 0)
endif()
if(NOT DEFINED PATCH_VERSION)
  set(PATCH_VERSION 0)
endif()

set(PROJECT_VERSION_PATCH ${PATCH_VERSION})

project(lab3 VERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH})

set(CPACK_PACKAGE_NAME "Lab3")
set(CPACK_PACKAGE_VERSION "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}")
set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${CMAKE_SYSTEM_NAME}")
set(CPACK_OUTPUT_FILE_PREFIX "${CMAKE_BINARY_DIR}/package")


add_executable(lab3 main.cpp)
target_include_directories(lab3 PRIVATE src)

set(CPACK_PACKAGE_NAME "Lab3")
set(CPACK_OUTPUT_FILE_PREFIX "${CMAKE_BINARY_DIR}/package")

if(WIN32)
  set(CPACK_GENERATOR "ZIP")
elseif(UNIX)
  set(CPACK_GENERATOR "DEB")
  set(CPACK_DEBIAN_PACKAGE_MAINTAINER "apranovich <apranovich@tpu.ru>")
endif()

install(TARGETS lab3 DESTINATION bin)

include(CPack)